--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
     "react-star-ratings": "^2.3.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
